cad-gymapp/templates/cad-AuthServiceDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  selector:
    matchLabels:
      app: auth
  replicas: 1
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: drescherflo/cad-gym-auth-service:dev
          ports:
            - containerPort: 7080
