cad-gymapp/templates/cad-GymServiceDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gym
spec:
  selector:
    matchLabels:
      app: gym
  replicas: 1
  template:
    metadata:
      labels:
        app: gym
    spec:
      containers:
        - name: gym
          image: cad-gym-gym-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 7081
