cad-gymapp/templates/cad-UserServiceDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
spec:
  selector:
    matchLabels:
      app: user
  replicas: 1
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: cad-gym-user-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 7082
