cad-gymapp/templates/gym-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gym-service-deployment
  labels:
    app: gym-service
spec:
  selector:
    matchLabels:
      app: gym-service
  replicas: 2
  template:
    metadata:
      labels:
        app: gym-service
    spec:
      containers:
        - name: gym-service
          image: europe-west3-docker.pkg.dev/cad-gym-app/cad-repo-dev/cad-gym-gym-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 7081
