cad-gymapp/templates/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  labels:
    app: user-service
spec:
  selector:
    matchLabels:
      app: user-service
  replicas: 2
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: europe-west3-docker.pkg.dev/cad-gym-app/cad-repo-dev/cad-gym-user-service:latest
          command: ["./wait-for-it.sh"]
          args: ["$(SQL_DB_URL)", "--", "java", "-jar", "/UserService.jar"]
          imagePullPolicy: Always
          ports:
            - containerPort: 7082
