cad-gymapp/templates/workout-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workout-service-deployment
  labels:
    app: workout-service
spec:
  selector:
    matchLabels:
      app: workout-service
  replicas: 2
  template:
    metadata:
      labels:
        app: workout-service
    spec:
      containers:
        - name: workout
          image: europe-west3-docker.pkg.dev/cad-gym-app/cad-repo-dev/cad-gym-workout-service:latest
          command: [ "./wait-for-it.sh" ]
          args: [ "$(SQL_DB_URL)", "--", "mvn", "spring-boot:run" ]
          imagePullPolicy: Always
          ports:
            - containerPort: 7083
