cad-gymapp/templates/cad-FrontendService.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    run: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
