cad-gymapp/templates/cad-GymServiceService.yaml
apiVersion: v1
kind: Service
metadata:
  name: gym
  labels:
    run: gym
spec:
  selector:
    app: gym
  ports:
    - protocol: TCP
      port: 7081
