cad-gymapp/templates/gym-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gym-service-service
spec:
  selector:
    app: gym-service
  ports:
    - protocol: TCP
      port: 7081
